--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -337,7 +337,7 @@
                                             </a>
                                         </div>
                                         <div>
-                                            <a href="https://youtu.be/vz5tlov2JxQ" target="_blank">
+                                            <a href="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315955/etape-1/fiche_pratique_artywiz_foot_1_-_crer_ou_importer_son_logo_2.pdf" target="_blank">
                                                 <button href="#" style="
                                                     min-width: 200px;
                                                     background: #0073ff;
