--- a/Artywiz/etape-2-new.html
+++ b/Artywiz/etape-2-new.html
@@ -127,26 +127,17 @@
                                         Animez <br> la communication <br> de votre club!
                                     </h1>
                                 </div>
-                                <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px; margin-bottom: 30px;">
-                                    <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
+                                <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px;">
+                                    <div align="center" style="background: url(https://res.cloudinary.com/dw1zug8d6/image/upload/v1581566005/etape-1/layout.png); width: 100%; height: auto; padding-bottom: 7%; background-repeat: no-repeat; background-size: cover; background-position: bottom; margin-bottom: 16px;">
+                                        <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
+                                    </div>
                                 </div>
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(100%); width:calc(230400px - 48000%); min-width:calc(100%);">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            ARTYWIZ Football a été conçu pour vous faire gagner! <br><br>
+                                            ARTYWIZ est un outil en ligne gratuit, mis à la disposition des clubs de football par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>
 
-                                            Avec ARTYWIZ vous gagnez du temps (il est simple d’utilisation et automatisé), vous gagnez de l’argent (Vos sponsors sont visibles sur tous les supports créés sur Artywiz) et vous gagnez en richesse et en qualité de communication! <br><br>
-
-                                            Des modèles de documents personnalisables et déclinés sur tous les supports actuels sont disponibles pour que vous puissiez – en quelques clics – faire des annonces de Matchs, communiquer des résultats, organiser des évènements ou lancer une nouvelle saison. <br><br>
-
-                                            Jusqu’au 31 décembre, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit (*) à ARTYWIZ Football, intégrant un accompagnement personnalisé… profitez-en! <br>
-                                            Nous sommes à votre disposition par email et par téléphone si vous avez besoin d’aide dans la prise en main d’ARTYWIZ pour votre club. <br><br>
-
-                                            (*) Au delà de cette période, à partir du premier janvier 2020, l’abonnement mensuel à ARTYWIZ Football sera de 12€ ttc par mois et par club.
-                                        </p>
-                                        <hr style="height: 1.5px; border: none; background: #D8D8D8; margin: 30px 0;">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            N’hésitez plus, rendez-vous sur Artywiz.io, et n’oubliez pas que nous sommes à votre disposition par email ou par téléphone si vous avez besoin d’aide dans la prise en main d’Artywiz pour votre club.
+                                            Réalisez vous mêmes imprimés, communication internet ou accessoires de sport..… ARTYWIZ a tout prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors, en toute simplicité!
                                         </p>
                                     </div>
                                 </div>
@@ -289,11 +280,8 @@
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(100%); width:calc(230400px - 48000%); min-width:calc(100%);">
-                                        <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 13px; font-weight: bold; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #2d2e2e; text-transform: uppercase;">
-                                            communiquer les matchs
-                                        </p>
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 30px; color: #607d8b;">
-                                            Aujourd’hui, découvrez comment faire des annonces de matchs de véritables évènements au sein de votre club et auprès de son public : <br><br>
+                                            Découvrez comment faire des annonces de matchs de véritables évènements au sein de votre club et auprès de son public : <br><br>
 
                                             1. Saisissez les détails du matchs, le nom de l’adversaire, choisissez les sponsors à valoriser, entrez votre message… <br><br>
 
@@ -311,16 +299,16 @@
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570178315/Artywiz/mockup-ex-annoncez-1.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/post-fb.png"/>
                                     </div>
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179147/Artywiz/mockup-ex-annoncez-4.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/web.png"/>
                                     </div>
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179018/Artywiz/mockup-ex-annoncez-3.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/emailing.png"/>
                                     </div>
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582698632/Email%20Launching/mockup-ex-annoncez-2_1.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/affiches.png"/>
                                     </div>
                                 </div>
                     <!--[if mso]>
@@ -354,7 +342,7 @@
                                             </a>
                                         </div>
                                         <div>
-                                            <a href="https://youtu.be/vz5tlov2JxQ" target="_blank">
+                                            <a href="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315682/etape-2/fiche_pratique_2.pdf" target="_blank">
                                                 <button href="#" style="
                                                     min-width: 200px;
                                                     background: #0073ff;
