--- a/Artywiz/etape-3-new.html
+++ b/Artywiz/etape-3-new.html
@@ -127,28 +127,17 @@
                                         Animez <br> la communication <br> de votre club!
                                     </h1>
                                 </div>
-                                <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px; margin-bottom: 30px;">
-                                    <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
+                                <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px;">
+                                    <div align="center" style="background: url(https://res.cloudinary.com/dw1zug8d6/image/upload/v1581566005/etape-1/layout.png); width: 100%; height: auto; padding-bottom: 7%; background-repeat: no-repeat; background-size: cover; background-position: bottom; margin-bottom: 16px;">
+                                        <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
+                                    </div>
                                 </div>
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(100%); width:calc(230400px - 48000%); min-width:calc(100%);">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            ARTYWIZ Football a été conçu pour vous faire gagner! <br><br>
+                                            ARTYWIZ est un outil en ligne gratuit, mis à la disposition des clubs de football par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>
 
-                                            Non pas des matches, c’est du ressort de vos équipes, mais du temps (Artywiz est simple d’utilisation, et automatisé), de l’argent (Artywiz est conçu pour intégrer vos sponsors sur tous les documents et développer les revenus du sponsoring), et une communication de qualité pour votre Club. <br><br>
-
-                                            Des modèles de documents personnalisables sont disponibles pour que vous puissiez – en quelques minutes – faires des annonces de Matchs, organiser des évènements ou lancer une nouvelle saison… en valorisant les sponsors du club sur chaque support de communication! <br><br>
-
-                                            ARTYWIZ Football démarre en Septembre 2019, et intègre déjà une trentaine de documents prêts à être utilisés, qui seront complétés par d’autres modèles pour atteindre une cinquantaine d’ici à la fin de l’année. <br><br>
-
-                                            Pendant cette période, ARTYWIZ, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit (*) à ARTYWIZ Football, intégrant un accompagnement personnalisé… profitez-en! <br>r>
-                                            Nous sommes à votre disposition par email et par téléphone si vous avez besoin d’aide dans la prise en main d’ARTYWIZ pour votre club. <br><br>
-
-                                            (*) Au delà de cette période, à partir du premier janvier 2020, l’abonnement mensuel à ARTYWIZ Football sera de 12€ ttc par mois et par club.
-                                        </p>
-                                        <hr style="height: 1.5px; border: none; background: #D8D8D8; margin: 30px 0;">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            N’hésitez plus, rendez-vous sur Artywiz.io, et n’oubliez pas que nous sommes à votre disposition par email ou par téléphone si vous avez besoin d’aide dans la prise en main d’Artywiz pour votre club.
+                                            Réalisez vous mêmes imprimés, communication internet ou accessoires de sport..… ARTYWIZ a tout prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors, en toute simplicité!
                                         </p>
                                     </div>
                                 </div>
@@ -289,11 +278,8 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="Margin: 0 30px 15px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                <div style="Margin: 0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(100%); width:calc(600px  - 100%); min-width:calc(100%); margin: 2px;">
-                                        <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 13px; font-weight: bold; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #2d2e2e; text-transform: uppercase;">
-                                            communiquer les résultats
-                                        </p>
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 30px; color: #607d8b;">
                                             Aujourd’hui, découvrez comment communiquer simplement les résultats des matchs de vos équipes : <br><br>
 
@@ -311,16 +297,16 @@
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570178315/Artywiz/mockup-ex-annoncez-1.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/post-fb.png"/>
                                     </div>
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179147/Artywiz/mockup-ex-annoncez-4.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/web.png"/>
                                     </div>
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179018/Artywiz/mockup-ex-annoncez-3.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/emailing.png"/>
                                     </div>
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582698632/Email%20Launching/mockup-ex-annoncez-2_1.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315367/Email%20Launching/affiches.png"/>
                                     </div>
                                 </div>
                     <!--[if mso]>
@@ -354,7 +340,7 @@
                                             </a>
                                         </div>
                                         <div>
-                                            <a href="https://youtu.be/vz5tlov2JxQ" target="_blank">
+                                            <a href="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583315728/etape-3/fiche_pratique_3.pdf" target="_blank">
                                                 <button href="#" style="
                                                     min-width: 200px;
                                                     background: #0073ff;
