--- a/Artywiz/etape-3-new.html
+++ b/Artywiz/etape-3-new.html
@@ -7,7 +7,7 @@
     <!--[if !mso]>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!--<![endif]-->
-    <title>Communiquez les résultats des matchs de vos équipes</title>
+    <title>Communiquez les résultats de vos équipes avec ARTYWIZ et la LGEF</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://res.cloudinary.com/dw1zug8d6/raw/upload/v1581568384/fonts/adam.cg%20pro/stylesheet.css">
     <style>
@@ -170,9 +170,11 @@
                                                                     <p style="font-family: Roboto; font-size: 10px; font-weight: normal; color: #ffffff; margin-bottom: 5px; margin-top: 0;">
                                                                         Votre mot de passe :
                                                                     </p>
+                                                                    @if($props['password'] != null)
                                                                     <h2 style="font-family: Roboto; font-size: 	20px; font-weight: bold; color: #ffffff; margin: 0;">
-                                                                        JsbhAct4040
+                                                                        {{ $props['password'] }}
                                                                     </h2>
+                                                                    @endif
                                                                 </div>
                                                         <!--[if mso]>
                                                             </td>
