Add full width img main
Add full width img main

--- a/Artywiz/premium-artywiz.html
+++ b/Artywiz/premium-artywiz.html
@@ -123,11 +123,11 @@
                                         letter-spacing: normal;
                                         color: #1579e9;
                                         text-transform: uppercase;
-                                        font-family: 'adamcgpro', serif;
+                                        font-family: 'adamcgpro', sans-serif;
                                     ">
                                         Votre compte <br>premium ARTYWIZ gratuit!
                                     </h2>
-                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583746584/artywiz/artywiz-bg-color.png" alt="">
+                                    <img style="width: 100%;" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1583746584/artywiz/artywiz-bg-color.png" alt="">
                                 </div>
                             </center>
                         </td>
