--- a/Lacuisine/invoice.html
+++ b/Lacuisine/invoice.html
@@ -327,12 +327,16 @@
                                         <a href="#" style="font-family: 'Barlow', sans-serif !important; font-weight: bold; font-size: 13px; line-height: 16px; text-decoration-line: underline; text-transform: uppercase; color: #444444;">
                                             Annuler ma commande
                                         </a>
-                                        <!-- 
-                                        ** Button ini di pake pada saat user blm melakukan pembayaran
-                                        <a href="#" style="width: 195px; height: 45px; background: #52B963; border-radius: 50px; font-family: 'Barlow', sans-serif !important; font-weight: bold; font-size: 13px; line-height: 16px; text-transform: uppercase; color: #FFFFFF; text-decoration: none; padding: 15px 38px;">
-                                            Payez maintenant
+                                        
+                                        <!-- ** Button ini di pake pada saat user blm melakukan pembayaran -->
+                                        <!-- <a href="#">
+                                            <button style="width: 195px; height: 45px; background: #52B963; border-radius: 50px; font-family: 'Barlow', sans-serif !important; font-weight: bold; font-size: 13px; line-height: 16px; text-transform: uppercase; color: #FFFFFF; text-decoration: none; padding: 15px 38px; margin-bottom: 20px; border: none; outline: none;">
+                                                Payez maintenant
+                                            </button>
                                         </a> 
-                                        -->
+                                        <p style="margin: 0; font-family: 'Barlow', sans-serif !important; font-weight: normal; font-size: 13px; line-height: 16px; text-align: center; color: #FE813A;">
+                                            veuillez compléter votre reçu de paiement avant 14h30
+                                        </p> -->
                                     </div>
                                 </div>
                     <!--[if mso]>
