Create new etape 1, Create activation email
- Create new etape 1
- Create activation email

--- a/Lacuisine/activation.html
+++ b/Lacuisine/activation.html
@@ -91,7 +91,7 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="Margin:0 80px 22px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-top: 20px;">
+                                <div style="Margin:0 50px 22px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-top: 20px;">
                                     <div style="display: inline-block; width:64%; max-width:64%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(64%); width:calc(480px - 100%); min-width:calc(64%);vertical-align: bottom; padding: 20px 0; text-align: left;">
                                         <table>
                                             <tr>
@@ -124,7 +124,7 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="Margin:0 80px 68px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                <div style="Margin:0 50px 68px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%);vertical-align: bottom; text-align: left;">
                                         <h1 style="font-family: 'Source Serif Pro', serif !important; font-style: normal; font-weight: bold; font-size: 36px; line-height: 49px; color: #444444; margin: 0;">
                                             Bonjour
@@ -149,7 +149,7 @@
                         <tr>
                             <td>
                     <![endif]-->
-                                <div style="Margin: 0 80px 30px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                <div style="Margin: 0 50px 30px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(100%); width:calc(600px  - 100%); min-width:calc(100%); margin: 2px;">
                                         <p style="font-family: 'Barlow', sans-serif !important; font-weight: normal; font-size: 13px; line-height: 16px; color: #444444; margin: 0;">
                                             Merci de votre inscription à l’alerte de lancement de la Cuisine de demain!
@@ -162,14 +162,14 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="Margin: 0 80px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-bottom: 52px;">
+                                <div style="Margin: 0 50px; max-width:580px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-bottom: 52px;">
                                     <h4 style="font-family: 'Barlow', sans-serif !important; font-style: normal; font-weight: bold; font-size: 18px; line-height: 22px; color: #444444; margin: 0;">
                                         Votre email :
                                     </h4>
                                     <h4 style="font-family: 'Barlow', sans-serif !important; font-style: normal; font-weight: normal; font-size: 18px; line-height: 22px; color: #444444; margin: 0;">
                                         pseiter@gmail.com
                                     </h4>
-                                    <hr style="margin: 35px 0 25px; border: none; width: 420px; height: 1px; background-color: #C4C4C4;">
+                                    <hr style="margin: 35px 0 25px; border: none; width: 100%; height: 1px; background-color: #C4C4C4;">
                                     <p style="font-family: 'Barlow', sans-serif !important; font-weight: normal; font-size: 13px; line-height: 16px; color: #444444; margin: 0 0 20px;">
                                         Si vous ne souhaitez pasrecevoir les mises à jour et promotions de la Cuisine de demain, cliquez pour vous désinscrire.
                                     </p>
