--- a/LGEF/newsletter-v4.2-gambar.html
+++ b/LGEF/newsletter-v4.2-gambar.html
@@ -22,10 +22,16 @@
                       <td align="center">
                         <table width="570" cellspacing="0" cellpadding="0" border="0" bgcolor="#1178C1">
                           <tr>
-                            <td bgcolor="#08568D">
-                              <a href="mailto:info@lgef.fr" target="_blank">
-                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586524974/LGEF/edito.png" alt="">
+                            <td bgcolor="#08568D" style="border-top-left-radius: 5px; border-top-right-radius: 5px;">
+                              <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586536141/LGEF/edito-1.png" alt="">
+                              <a href="https://lgef.fff.fr/" target="_blank">
+                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586536147/LGEF/edito-2.png" alt="">
                               </a>
+                              <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586536151/LGEF/edito-3.png" alt="">
+                              <a href="mailto:info@lgef.fr" target="_blank">
+                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586536156/LGEF/edito-4.png" alt="">
+                              </a>
+                              <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586536160/LGEF/edito-5.png" alt="">
                             </td>
                           </tr>
                           <tr>
@@ -134,7 +140,7 @@
                     <tr>
                       <td align="center">
                         <a href="https://youtu.be/ACN8MyCPw6I" target="_blank">
-                          <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586526785/LGEF/10-card-le-message.png" alt="">
+                          <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1586533127/LGEF/10-card-le-message.png" alt="">
                         </a>
                       </td>
                     </tr>
