- Create email LGEF - Create email etape 4
- Create email LGEF
- Create email etape 4

--- a/LGEF/newsletter-v4.2.html
+++ b/LGEF/newsletter-v4.2.html
@@ -103,15 +103,24 @@
                     <![endif]-->
                                 <div style="Margin: 0 auto 30px; max-width:500px; width: 89%; min-width: 260px; background: #08568D; border-radius: 5px;">
                                     <div style="padding: 30px 20px;">
-                                        <h2 style="font-family: 'Titillium Web', sans-serif;
-                                        font-weight: bold;
-                                        font-size: 31px;
-                                        line-height: 53px;
+                                        <h3 style="font-family: 'Titillium Web', sans-serif;
+                                        font-weight: 600;
+                                        font-size: 24px;
+                                        line-height: 30px;
                                         text-align: center;
-                                        text-transform: uppercase;
                                         color: #fff;
                                         margin: 0;">
-                                            Edito
+                                            N° 101 - Vendredi 17 avril 2020
+                                        </h3>
+                                        <h2 style="font-family: 'Titillium Web', sans-serif;
+                                        font-weight: bold;
+                                        font-size: 36px;
+                                        line-height: 55px;
+                                        text-align: center;
+                                        color: #fff;
+                                        text-transform: uppercase;
+                                        margin: 0;">
+                                            Bonjour à toutes et à tous,
                                         </h2>
                                         <p style="font-family: 'Muli', sans-serif;
                                         font-weight: 300;
@@ -120,11 +129,11 @@
                                         text-align: center;
                                         color: #fff;
                                         margin: 0;">
-                                            En cette période inédite pour notre société et plus particulièrement pour le football amateur, la communication est un des leviers importants pour garder le contact avec vous. Cela passe par le site officiel <a href="https://lgef.fff.fr/" target="_blank" style="color: #fff;">lgef.fff.fr</a>, nos réseaux sociaux, mais aussi par cette newsletter hebdomadaire qui fait peau neuve cette semaine, en proposant un nouvel habillage à l’occasion du 100e numéro ! <br><br>
+                                            Voici les dernières informations de la Ligue du Grand Est de Football… <br><br>
 
-                                            Dans notre volonté d’être plus que jamais à vos côtés, nous restons disponibles pour répondre à vos interrogations et suggestions, soit directement avec vos interlocuteurs habituels service par service, soit via la boite mail spécialement mise en place dans le cadre de cette pandémie du Covid-19 : <a href="mailto:info@lgef.fr" style="color: #fff;">info@lgef.fr</a>. <br><br>
+                                            Nous restons disponibles pour répondre à vos interrogations et suggestions, soit directement avec vos interlocuteurs habituels service par service, soit via la boite mail spécialement mise en place dans le cadre de cette pandémie du Coronavirus/Covid-19 : info@lgef.fr. <br><br>
 
-                                            Merci encore de votre engagement au service du football, <br> prenez soin de vous et de vos proches !
+                                            Bonne lecture !
                                         </p>
                                     </div>
                                     <div style="width: 100%; background-color: #033B63; border-radius: 5px;">
