--- a/Artywiz/etape-4.html
+++ b/Artywiz/etape-4.html
@@ -11,8 +11,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://res.cloudinary.com/dw1zug8d6/raw/upload/v1581568384/fonts/adam.cg%20pro/stylesheet.css">
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap');
-        @import url('https://res.cloudinary.com/dw1zug8d6/raw/upload/v1581568384/fonts/adam.cg%20pro/stylesheet.css');
         body{
             margin: 0 !important;
             padding: 0 !important;
@@ -371,13 +369,15 @@
                                                         <tr>
                                                             <td>
                                                 <![endif]-->
-                                                                <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%); margin-bottom: 5px;">
+                                                                <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%); margin-bottom: 5px;">
                                                                     <p style="font-family: Roboto; font-size: 10px; font-weight: normal; color: #ffffff; margin-bottom: 5px; margin-top: 0;">
                                                                         Votre mot de passe :
                                                                     </p>
+                                                                    @if($props['password'] != null)
                                                                     <h2 style="font-family: Roboto; font-size: 	20px; font-weight: bold; color: #ffffff; margin: 0;">
                                                                         {{ $props['password'] }}
                                                                     </h2>
+                                                                    @endif
                                                                 </div>
                                                         <!--[if mso]>
                                                             </td>
