- Rename email covid to be etape-5 - Create new template etape-6
- Rename email covid to be etape-5
- Create new template etape-6

--- a/Artywiz/etape-5.html
+++ b/Artywiz/etape-5.html
@@ -45,7 +45,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
 </head>
 
 <body class="body">
-  <div style="display:none; font-size:0; line-height:0;">{preheader}</div>
   <modules>
     <!--header-->
     <module label="header" active>
@@ -659,6 +658,16 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                     <!--end title-->
                                     <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                    <tr align="center">
+                                        <td
+                                            style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#4A4A4A;">
+                                            <single label="title">ARTYWIZ football est l’agence virtuelle de communication des clubs. <br>
+                                                En quelques clics, les clubs peuvent créer eux-mêmes toute leur communication, gratuitement et en toute simplicité!</single>
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <td height="40"></td>
                                     </tr>
                                 </table>
@@ -828,7 +837,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Animez votre communauté,</b></single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Animez votre communauté</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -862,7 +871,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Annoncez les matchs de vos équipes,</b></single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Annoncez les matchs de vos équipes</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -930,7 +939,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Préparer une nouvelle saison,</b></single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Préparez une <br> nouvelle saison</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -964,7 +973,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Mesures <br>sanitaires</b></single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Affichez les <br> mesures sanitaires</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -998,7 +1007,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; color:#FFFFFF;font-weight:normal;">
-                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Organiser <br>un évènement</b></single>
+                                            <single label="title" style="line-height: 20px; font-weight: 600;"><b>Organisez <br> un évènement</b></single>
                                         </td>
                                     </tr>
                                     <!--end title-->
